trunk/Archive2/d2/3432b0dd91e2c3/output
main.cpp:7:5: error: static_assert failed "Error!"
    static_assert(std::is_same<T, const int>::value, "Error!");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:19:22: note: in instantiation of function template specialization 'bar<int>' requested here
    void(*pf)(int) = bar;
                     ^
1 error generated.
